--- a/templates/rcalendar/month.html
+++ b/templates/rcalendar/month.html
@@ -221,14 +221,14 @@
     <ion-content class="event-detail-container" has-bouncing="false" ng-show="showEventDetail" overflow-scroll="false">
         <table class="table table-bordered table-striped table-fixed event-detail-table">
             <tr ng-repeat="event in selectedDate.events" ng-click="eventSelected({event:event})">
-                <td ng-if="!event.allDay" class="monthview-eventdetail-timecolumn">{{::event.startTime|date: 'hh:mm a'}}
+                <td ng-if="!event.allDay" class="monthview-eventdetail-timecolumn">{{::event.startTime|date: 'h:mm a'}}
                     -
-                    {{::event.endTime|date: 'hh:mm a'}}
+                    {{::event.endTime|date: 'h:mm a'}}
                 </td>
                 <td ng-if="event.allDay" class="monthview-eventdetail-timecolumn">All day</td>
                 <td class="event-detail">
                     <div>{{::event.title}}</div>
-                    <div>{{::event.details}}</div>div>
+                    <div>{{::event.details}}</div>
                 </td>
             </tr>
             <tr ng-if="!selectedDate.events">
