Month view event items wrap fix

--- a/templates/rcalendar/month.html
+++ b/templates/rcalendar/month.html
@@ -226,7 +226,7 @@
                     {{::event.endTime|date: 'h:mm a'}}
                 </td>
                 <td ng-if="event.allDay" class="monthview-eventdetail-timecolumn">All day</td>
-                <td class="event-detail">
+                <td class="event-detail style="word-wrap: break-word;word-break: break-all;white-space: normal;">
                     <div>{{::event.title}}</div>
                     <div>{{::event.details}}</div>
                 </td>
