Updated time selected to pass on params

--- a/templates/rcalendar/day.html
+++ b/templates/rcalendar/day.html
@@ -31,7 +31,7 @@
                         <td class="calendar-hour-column text-center">
                             {{::tm.time | date: formatHourColumn}}
                         </td>
-                        <td class="calendar-cell" ng-click="select(tm.time)">
+                        <td class="calendar-cell" ng-click="select(tm.time, tm.events)">
                             <div ng-class="{'calendar-event-wrap': tm.events}" ng-if="tm.events">
                                 <div ng-repeat="displayEvent in tm.events" class="calendar-event"
                                      ng-click="eventSelected({event:displayEvent.event})"
